<resources>
    <string name="app_name">BoiteAOutils</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Boite à outils</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_analyseurSon">Analyseur de son</string>

    <string name="menu_boussole">Boussole</string>
    <string name="fragment_boussole">XXX° SW</string>
    <string name="imageboussole">ImageBoussole</string>

    <string name="north">N</string>
    <string name="east">E</string>
    <string name="south">S</string>
    <string name="west">W</string>
    <string name="northeast">NE</string>
    <string name="northwest">NW</string>
    <string name="southeast">SE</string>
    <string name="southwest">SW</string>

    <string name="menu_lampe">Lampe</string>
    <string name="on_off">On/Off</string>
    <string name="off">Off</string>
    <string name="on">On</string>

    <string name="menu_niveau">Niveau</string>
    <string name="angleX">Angle X = xx.x°</string>
    <string name="angleY">Angle Y = xx.x°</string>
    <string name="cercle_anim">Cercle_animé</string>
    <string name="cercle_d_origine">Cercle_d\'origine</string>
</resources>
