<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
    </group>

    <item android:title="Boite à outils">
        <menu>
            <item
                android:id="@+id/nav_boussole"
                android:icon="@drawable/compass_icon"
                android:title="@string/menu_boussole" />
            <item
                android:id="@+id/nav_lampe"
                android:icon="@drawable/lampe_icon"
                android:title="@string/menu_lampe" />
            <item
                android:id="@+id/nav_niveau"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_niveau" />
            <item
                android:id="@+id/nav_analyseurSon"
                android:icon="@drawable/ic_menu_sound"
                android:title="@string/menu_analyseurSon"/>
        </menu>
    </item>

</menu>
