<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.boiteaoutils.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_boussole"
        android:name="com.example.boiteaoutils.ui.boussole.BoussoleFragment"
        android:label="@string/menu_boussole"
        tools:layout="@layout/fragment_boussole" />
    <fragment
        android:id="@+id/nav_lampe"
        android:name="com.example.boiteaoutils.ui.lampe.LampeFragment"
        android:label="@string/menu_lampe"
        tools:layout="@layout/fragment_lampe" />
    <fragment
        android:id="@+id/nav_niveau"
        android:name="com.example.boiteaoutils.ui.niveau.NiveauFragment"
        android:label="@string/menu_niveau"
        tools:layout="@layout/fragment_niveau" />
    <fragment
        android:id="@+id/nav_analyseurSon"
        android:name="com.example.boiteaoutils.ui.analyseurDeSon.FragmentAnalyseurSon"
        android:label="@string/menu_analyseurSon"
        tools:layout="@layout/fragment_analyseur_son" />
</navigation>
